@@ -1,8 +1,13 @@
 to run the code, first install the maven, then do the following steps in the same directory as this readme file:
 1. mvn complie
+
 2. mvn exec:java -Dexec.mainClass=main -Dexec.args=<data directory><Lamda for TP><reference point ID for ERP><number of candidate trajectories involved for the shape query experiment>
    eg1. mvn exec:java -Dexec.mainClass=main -Dexec.args="PortoData 0.2 1219 10000"
-   eg2. mvn exec:java -Dexec.mainClass=main -Dexec.args="TDrive_data 0.2 49568 128935"
+   eg2.
+   
+   export MAVEN_OPTS="-Xmx100g -XX:MaxPermSize=100g"
+   
+    mvn exec:java -Dexec.mainClass=main -Dexec.args="TDrive_data 0.2 49568 128935"
 
 
 
